[gd_scene load_steps=41 format=3 uid="uid://buaim4mku5vl2"]

[ext_resource type="Texture2D" uid="uid://pa818wd6l3wg" path="res://assets/backgrounds/backgroundhomescreen3.png" id="1_ty1ao"]
[ext_resource type="Texture2D" uid="uid://d3oqx8jsaacei" path="res://assets/icons/Screenshot 2025-11-20 202636.png" id="2_ty1ao"]
[ext_resource type="Script" uid="uid://jqfhqqk2mv15" path="res://scripts/ui/TopBar.gd" id="3_4jx0l"]
[ext_resource type="Texture2D" uid="uid://dmygidwi4s0o7" path="res://assets/icons/button.png" id="3_57c6s"]
[ext_resource type="Texture2D" uid="uid://bpsobsvaeoiip" path="res://assets/icons/gold coin.png" id="4_ty1ao"]
[ext_resource type="Texture2D" uid="uid://cj6vtkyan2njc" path="res://assets/icons/gems.png" id="5_0kdue"]
[ext_resource type="Texture2D" uid="uid://deeta1mjbu0x0" path="res://assets/icons/orange square.png" id="6_bbp0q"]
[ext_resource type="Script" uid="uid://be4frm6wcyg0a" path="res://scripts/ui/SettingsPopup.gd" id="7_hsodw"]
[ext_resource type="Script" uid="uid://b0ognybs14qxr" path="res://scripts/ui/PetAreaControl.gd" id="8_a7whw"]
[ext_resource type="Texture2D" uid="uid://d2xlckiyekodv" path="res://assets/sprites/dog_animation/idle 1.png" id="9_roh6j"]
[ext_resource type="Texture2D" uid="uid://c7kimjybao6ia" path="res://assets/sprites/dog_animation/idle 6.png" id="10_js3mc"]
[ext_resource type="Texture2D" uid="uid://dio6g0ommegn5" path="res://assets/sprites/dog_animation/idle 3.png" id="11_ai5qb"]
[ext_resource type="Texture2D" uid="uid://biagfmbemgchk" path="res://assets/sprites/dog_animation/idle 2.png" id="12_lqk23"]
[ext_resource type="Texture2D" uid="uid://wqiwxo5rvjw0" path="res://assets/sprites/dog_animation/idle 4.png" id="13_5cp3b"]
[ext_resource type="Texture2D" uid="uid://5qcet5dkjv" path="res://assets/sprites/dog_animation/idle 10.png" id="14_478mm"]
[ext_resource type="Texture2D" uid="uid://joom7lwebguo" path="res://assets/sprites/dog_animation/idle 5.png" id="15_mirar"]
[ext_resource type="Script" uid="uid://dv2delyhry6hg" path="res://scripts/ui/HelpPopup.gd" id="15_qnf6t"]
[ext_resource type="Texture2D" uid="uid://5fle5cfrpi4r" path="res://assets/sprites/dog_animation/idle 14.png" id="16_7ovmh"]
[ext_resource type="Texture2D" uid="uid://y4d1k02w58p8" path="res://assets/sprites/dog_animation/idle 9.png" id="17_g31ly"]
[ext_resource type="Texture2D" uid="uid://b1i7dxem0iyt6" path="res://assets/sprites/dog_animation/idle 17.png" id="18_42v5f"]
[ext_resource type="Script" uid="uid://dbsbbw0s4tvl4" path="res://scripts/ui/FeedControl.gd" id="18_vub6t"]
[ext_resource type="Texture2D" uid="uid://ddoghhjl4d8e4" path="res://assets/sprites/dog_animation/idle 11.png" id="19_bdsga"]
[ext_resource type="Texture2D" uid="uid://cjexg8uiyn5j7" path="res://assets/sprites/dog_animation/idle 19.png" id="20_d72jo"]
[ext_resource type="Texture2D" uid="uid://cvg8v2jrs1war" path="res://assets/sprites/dog_animation/idle 12.png" id="21_piu6s"]
[ext_resource type="Texture2D" uid="uid://cf4tic2l3tusg" path="res://assets/sprites/dog_animation/idle 18.png" id="22_clcke"]
[ext_resource type="Texture2D" uid="uid://bc7pq5t8jkylc" path="res://assets/sprites/dog_animation/idle 13.png" id="23_ivny5"]
[ext_resource type="Script" uid="uid://c61orpfqcyo3l" path="res://scripts/animated_sprite_2d.gd" id="24_cl5sq"]
[ext_resource type="Texture2D" uid="uid://c4qll4r72f315" path="res://assets/ui/hunger_energy_bars_with_bg.png" id="29_2qans"]
[ext_resource type="Texture2D" uid="uid://dprhm85rwdg0n" path="res://assets/ui/hunger_energy_bars_without_bg.png" id="30_n3beq"]
[ext_resource type="Script" uid="uid://c2ivmpddcw628" path="res://scripts/hunger_bar.gd" id="31_6jvfo"]
[ext_resource type="Script" uid="uid://bev8ipxalx5v2" path="res://scripts/energy_bar.gd" id="32_3tkfy"]

[sub_resource type="SystemFont" id="SystemFont_kccng"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x34j0"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": ExtResource("9_roh6j")
}, {
"duration": 1.5,
"texture": ExtResource("10_js3mc")
}, {
"duration": 4.0,
"texture": ExtResource("11_ai5qb")
}, {
"duration": 1.5,
"texture": ExtResource("12_lqk23")
}, {
"duration": 4.0,
"texture": ExtResource("13_5cp3b")
}, {
"duration": 1.5,
"texture": ExtResource("14_478mm")
}, {
"duration": 4.0,
"texture": ExtResource("15_mirar")
}, {
"duration": 1.5,
"texture": ExtResource("16_7ovmh")
}, {
"duration": 4.0,
"texture": ExtResource("17_g31ly")
}, {
"duration": 1.5,
"texture": ExtResource("18_42v5f")
}, {
"duration": 4.0,
"texture": ExtResource("19_bdsga")
}, {
"duration": 1.5,
"texture": ExtResource("20_d72jo")
}, {
"duration": 4.0,
"texture": ExtResource("21_piu6s")
}, {
"duration": 1.5,
"texture": ExtResource("22_clcke")
}, {
"duration": 4.0,
"texture": ExtResource("23_ivny5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4jx0l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vub6t"]
bg_color = Color(0.99215686, 0.6431373, 0.58431375, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8ihn"]
bg_color = Color(0.11764706, 0.7254902, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc30e"]
atlas = ExtResource("29_2qans")
region = Rect2(195.00494, 1.9675827, 483.15326, 103.92984)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cuaw"]
atlas = ExtResource("30_n3beq")
region = Rect2(36.624084, 194.69385, 414.748, 113.223175)

[sub_resource type="AtlasTexture" id="AtlasTexture_u44bh"]
atlas = ExtResource("29_2qans")
region = Rect2(218.73035, -36.767036, 411.17944, 140.30768)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylsw0"]
atlas = ExtResource("30_n3beq")
region = Rect2(42.986755, 319.668, 425.93924, 146.556)

[node name="Home" type="Node2D"]

[node name="Home Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Home Control"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
texture = ExtResource("1_ty1ao")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3

[node name="guidelines" type="TextureRect" parent="Home Control"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_right = 480.0
offset_bottom = 853.3334
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_ty1ao")

[node name="Top Bar" type="Control" parent="Home Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
script = ExtResource("3_4jx0l")

[node name="coin bg" type="TextureRect" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 8.0
offset_top = -75.0
offset_right = 236.0
offset_bottom = 160.0
texture = ExtResource("3_57c6s")
expand_mode = 1

[node name="Coin" type="NinePatchRect" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 35.0
offset_top = 19.0
offset_right = 74.0
offset_bottom = 59.0
texture = ExtResource("4_ty1ao")

[node name="gem bg" type="TextureRect" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 226.0
offset_top = -75.0
offset_right = 431.0
offset_bottom = 160.0
texture = ExtResource("3_57c6s")
expand_mode = 1

[node name="Gem" type="NinePatchRect" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 236.0
offset_top = 11.0
offset_right = 307.0
offset_bottom = 68.0
texture = ExtResource("5_0kdue")

[node name="settingoutline" type="NinePatchRect" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 516.0
offset_top = 6.0
offset_right = 590.0
offset_bottom = 78.0
texture = ExtResource("6_bbp0q")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="SettingsMenu" type="MenuButton" parent="Home Control/Top Bar/settingoutline"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.058000002
anchor_top = 0.083000004
anchor_right = 0.90400004
anchor_bottom = 0.9110001
offset_left = -13.292
offset_top = -8.976
offset_right = 16.103996
offset_bottom = 19.407997
theme_override_font_sizes/font_size = 51
text = "‚öôÔ∏è"

[node name="orange button3" type="NinePatchRect" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 594.0
offset_top = 6.0
offset_right = 668.0
offset_bottom = 78.0
texture = ExtResource("6_bbp0q")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="coinlabel" type="Label" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 80.0
offset_top = 25.0
offset_right = 202.0
offset_bottom = 57.0
theme_override_fonts/font = SubResource("SystemFont_kccng")
theme_override_font_sizes/font_size = 23
text = "0"

[node name="gemlabel" type="Label" parent="Home Control/Top Bar"]
layout_mode = 0
offset_left = 292.0
offset_top = 25.0
offset_right = 397.0
offset_bottom = 57.0
theme_override_fonts/font = SubResource("SystemFont_kccng")
theme_override_font_sizes/font_size = 23
text = "o"

[node name="PetAreaControl" type="Control" parent="Home Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 141.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_a7whw")

[node name="PetNameLabel" type="RichTextLabel" parent="Home Control/PetAreaControl"]
layout_mode = 0
offset_left = 108.0
offset_top = 206.5
offset_right = 600.0
offset_bottom = 259.5
theme_override_font_sizes/normal_font_size = 37
theme_override_font_sizes/bold_font_size = 37
text = "fluffy"
autowrap_mode = 0
horizontal_alignment = 1

[node name="RenameButton" type="Button" parent="Home Control/PetAreaControl"]
layout_mode = 0
offset_left = 569.0
offset_top = 206.5
offset_right = 631.0
offset_bottom = 268.5
theme_override_font_sizes/font_size = 39
text = "üè∑Ô∏è"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Home Control/PetAreaControl"]
position = Vector2(359, 738)
scale = Vector2(0.75, 0.818)
sprite_frames = SubResource("SpriteFrames_x34j0")
animation = &"idle"
script = ExtResource("24_cl5sq")

[node name="SettingsPopup" type="PopupPanel" parent="Home Control"]
oversampling_override = 1.0
position = Vector2i(60, 200)
size = Vector2i(600, 900)
max_size = Vector2i(16384, 900)
script = ExtResource("7_hsodw")

[node name="VBoxContainer" type="VBoxContainer" parent="Home Control/SettingsPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 896.0

[node name="settingsheader" type="Label" parent="Home Control/SettingsPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="Home Control/SettingsPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="volumesubheader" type="Label" parent="Home Control/SettingsPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="Home Control/SettingsPopup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
value = 50.0

[node name="CloseButton" type="Button" parent="Home Control/SettingsPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4jx0l")
text = "Close"

[node name="Help Popup" type="PopupPanel" parent="Home Control"]
oversampling_override = 1.0
position = Vector2i(60, 0)
size = Vector2i(1140, 900)
max_size = Vector2i(16384, 900)
script = ExtResource("15_qnf6t")

[node name="MarginContainer" type="MarginContainer" parent="Home Control/Help Popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 1136.0
offset_bottom = 896.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Home Control/Help Popup/MarginContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2

[node name="helpheader" type="Label" parent="Home Control/Help Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "Help"

[node name="Label" type="Label" parent="Home Control/Help Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "This is your help information"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Home Control/Help Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_4jx0l")
text = "Close"

[node name="FeedControl" type="Control" parent="Home Control"]
anchors_preset = 0
offset_left = 8.0
offset_top = 1070.0
offset_right = 719.0
offset_bottom = 1190.0
script = ExtResource("18_vub6t")

[node name="FoodButton" type="Button" parent="Home Control/FeedControl"]
layout_mode = 0
offset_left = 72.0
offset_right = 188.0
offset_bottom = 120.0
pivot_offset = Vector2(200, 150)
theme_override_font_sizes/font_size = 79
theme_override_styles/normal = SubResource("StyleBoxFlat_vub6t")
text = "üçñ"

[node name="FoodPopup" type="PopupPanel" parent="Home Control/FeedControl"]
oversampling_override = 1.0

[node name="FoodList" type="VBoxContainer" parent="Home Control/FeedControl/FoodPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="ShopControl" type="Control" parent="Home Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShopButton" type="Button" parent="Home Control/ShopControl"]
layout_mode = 0
offset_left = 482.0
offset_top = 1070.0
offset_right = 657.0
offset_bottom = 1233.0
theme_override_font_sizes/font_size = 55
theme_override_styles/pressed = SubResource("StyleBoxFlat_s8ihn")
text = "üè™
Shop"

[node name="HungerBar" type="TextureProgressBar" parent="Home Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.006
anchor_right = 20.0
anchor_bottom = 21.933
offset_left = 61.0
offset_top = 1927.68
offset_right = -14121.0
offset_bottom = -27376.24
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_uc30e")
texture_progress = SubResource("AtlasTexture_5cuaw")
script = ExtResource("31_6jvfo")

[node name="HungerLabel" type="Label" parent="Home Control/HungerBar"]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "100"
metadata/_edit_use_anchors_ = true

[node name="EnergyBar" type="TextureProgressBar" parent="Home Control"]
layout_mode = 0
offset_left = 491.00003
offset_top = 403.00003
offset_right = 999.8889
offset_bottom = 549.0
scale = Vector2(0.45, 0.45)
value = 100.0
texture_under = SubResource("AtlasTexture_u44bh")
texture_progress = SubResource("AtlasTexture_ylsw0")
script = ExtResource("32_3tkfy")

[node name="EnergyLabel" type="Label" parent="Home Control/EnergyBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.86800003
anchor_bottom = 0.38700002
offset_left = 188.88885
offset_top = -4.4445133
offset_right = -134.97772
offset_bottom = -0.9465141
theme_override_font_sizes/font_size = 35
text = "100"

[connection signal="pressed" from="Home Control/ShopControl/ShopButton" to="Home Control/Top Bar" method="_on_shop_button_pressed"]
